# -ESP32-S3-

./: .clangd  README.md  hello_world_project.md
.claude/: settings.local.json
docs/: BLE调光功能详解.md  DHT11_RMT驱动详解.md  WiFi_MQTT物联网详解.md  调试记录_MQTT连OneNET断连问题.md
main/: CMakeLists.txt  GPIO.c  GPIO.h  Kconfig.projbuild  config.h  hello_world_main.c
main/Board/: adc.c  adc.h  ble.c  ble.h  dht11.c  dht11.h  oled.c  oled.h  oled_font.h  pwm.c  pwm.h
main/distance/: mqtt.c  mqtt.h  sensor_task.c  sensor_task.h  wifi.c  wifi.h
